Finish query/insert/update/delete phone item. Add adapter to create custom ListView.

--- a/app/src/main/res/layout/activity_edit_phone_item.xml
+++ b/app/src/main/res/layout/activity_edit_phone_item.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddPhoneItemActivity">
+    tools:context=".EditPhoneItemActivity">
 
     <EditText
         android:id="@+id/title_edit_text"
@@ -58,4 +58,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/number_edit_text"/>
+
 </android.support.constraint.ConstraintLayout>
